Initial version of the main part: routing + optimal time (see #9)

--- a/literature.bib
+++ b/literature.bib
@@ -36,6 +36,17 @@
   shorttitle = {High ambient temperature and mortality}
 }
 
+@Book{Brent2002,
+  title =     {Algorithms for minimization without derivatives},
+  publisher = {Dover Publ.},
+  year =      {2002},
+  author =    {Brent, Richard P.},
+  series =    {Dover books on mathematics},
+  address =   {Mineola, NY},
+  date =      {2002},
+  isbn =      {978-0-486-41998-5}
+}
+
 @InProceedings{Dang2012,
   author =     {Dang, Congwei and Iwai, Masayuki and Umeda, Kazunori and Tobe, Yoshito and Sezaki, Kaoru},
   title =      {{NaviComf}: Navigate pedestrians for comfort using multi-modal environmental sensors},
@@ -197,7 +208,7 @@
 }
 
 @InProceedings{Jendritzky2010,
-  author =    {Gerd Jendritzky and Peter Bröde and Dusan Fiala and George Havenith and Philipp Weihs and Ekaterina Batchvarova and Richard DeDear},
+  author =    {G. Jendritzky and P. Bröde and D. Fiala and G. Havenith and P. Weihs and E. Batchvarova and R. DeDear},
   title =     {The Universal Thermal Climate Index UTCI},
   booktitle = {Proceedings of the 7th Conference on Biometeorology, Freiburg, Germany, April 12-14th, 2010},
   year =      {2010},
@@ -300,6 +311,19 @@
   langid =    {english}
 }
 
+@InBook{Press1992,
+  chapter =   {9.3 Van Wijngaarden–Dekker–Brent Method},
+  pages =     {352--355},
+  title =     {Numerical Recipes in Fortran 77: The Art of Scientific Computing},
+  publisher = {Cambridge University Press},
+  year =      {1992},
+  author =    {William H. Press and Saul A. Teukolsky and William T. Vetterling and Brian P. Flannery},
+  address =   {Cambridge},
+  edition =   {2},
+  url =       {http://apps.nrbook.com/fortran/index.html},
+  urldate =   {2017-01-22}
+}
+
 @TechReport{Seppaenen2006,
   author      = {Olli Seppänen and William J. Fisk and Q. H. Lei},
   title       = {Effect of Temperature on Task Performance in Offfice Environment},
@@ -336,7 +360,7 @@
 }
 
 @Article{Staiger2011,
-  author =       {Staiger, Henning and Laschewski, Gudrun and Grätz, Angelika},
+  author =       {Staiger, H.and Laschewski, G. and Grätz, A.},
   title =        {The perceived temperature – a versatile index for the assessment of the human thermal environment. Part A: scientific basics},
   journal =      {International Journal of Biometeorology},
   year =         {2011},
