--- a/paper.tex
+++ b/paper.tex
@@ -3,13 +3,14 @@
 % !TeX spellcheck = en_GB
 % !BIB program = biber
 
-\documentclass[a4paper,parskip=full]{scrartcl}
+\documentclass[a4paper,parskip=half]{scrartcl}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{siunitx}
 \usepackage{hyperref}
+\usepackage{graphicx}
 
 \usepackage{csquotes}
 \usepackage[style=authoryear,backend=biber]{biblatex} 
