Initial version of the evaluation section (see #11 )

--- a/literature.bib
+++ b/literature.bib
@@ -25,6 +25,16 @@
   journaltitle = {The Journal of the Operational Research Society}
 }
 
+@Software{ASF2016,
+  author =      {{Apache Software Foundation}},
+  title =       {Commons Math: The Apache Commons Mathematics Library},
+  version =     {3.6.1},
+  date =        {2016-03-17},
+  url =         {http://commons.apache.org/proper/commons-math/},
+  urldate =     {2016-06-02},
+  shortauthor = {{ASF}}
+}
+
 @Article{Basu2009,
   author =     {Basu, Rupa},
   title =      {High ambient temperature and mortality: a review of epidemiologic studies from 2001 to 2008},
@@ -126,6 +136,15 @@
   location =  {New York, {NY}, {USA}}
 }
 
+@Misc{DWD2016,
+  author =  {{Deutscher Wetterdienst}},
+  title =   {Aktuelle stündliche Stationsmessung der Lufttemperatur und Luftfeuchte, Qualitätskontrolle noch nicht vollständig durchlaufen},
+  year =    {2016},
+  note =    {Station: Rheinstetten},
+  url =     {ftp://ftp-cdc.dwd.de/pub/CDC/observations_germany/climate/hourly/air_temperature/recent/stundenwerte_TU_04177_akt.zip},
+  urldate = {2016-02-24}
+}
+
 @Article{Ebi2004,
   author  = {Ebi, Kristie L. and Teisberg, Thomas J. and Kalkstein, Laurence S. and Robinson, Lawrence and Weiher, Rodney F.},
   title   = {Heat {Watch}/{Warning} {Systems} {Save} {Lives}: {Estimated} {Costs} and {Benefits} for {Philadelphia} 1995--98},
@@ -149,6 +168,23 @@
   journaltitle = {British Journal of Industrial Medicine},
   langid =       {english},
   shortjournal = {Br J Ind Med}
+}
+
+@Software{GraphHopper2016,
+  author =  {{GraphHopper GmbH}},
+  title =   {GraphHopper Routing Engine},
+  version = {0.6},
+  year =    {2016},
+  date =    {2016-02-08},
+  url =     {https://graphhopper.com/}
+}
+
+@Software{GraphHopper2016a,
+  author =  {{GraphHopper GmbH}},
+  title =   {GraphHopper Routing Engine: Java Core Library},
+  version = {0.6},
+  date =    {2016-02-08},
+  url =     {https://github.com/graphhopper/graphhopper/tree/0.6/core}
 }
 
 @Article{Guthrie1995,
@@ -298,6 +334,14 @@
   langid =       {english}
 }
 
+@Misc{OSMF2016,
+  author =      {{OpenStreetMap Foundation}},
+  title =       {The OpenStreetMap Project},
+  year =        {2016},
+  shortauthor = {{OSMF}},
+  url =         {http://www.openstreetmap.org/}
+}
+
 @InCollection{Prashad2014,
   author =    {Prashad, Lela},
   title =     {Urban Heat Island},
@@ -360,7 +404,7 @@
 }
 
 @Article{Staiger2011,
-  author =       {Staiger, H.and Laschewski, G. and Grätz, A.},
+  author =       {Staiger, H. and Laschewski, G. and Grätz, A.},
   title =        {The perceived temperature – a versatile index for the assessment of the human thermal environment. Part A: scientific basics},
   journal =      {International Journal of Biometeorology},
   year =         {2011},
@@ -373,6 +417,12 @@
   langid =       {english},
   shortjournal = {Int J Biometeorol},
   shorttitle =   {The perceived temperature – a versatile index for the assessment of the human thermal environment. Part A}
+}
+
+@Misc{Stamen2017,
+  author = {{Stamen Design}},
+  year =   {2017},
+  url =    {http://stamen.com/}
 }
 
 @Article{Steadman1979,
@@ -427,3 +477,5 @@
 }
 
 @comment{jabref-meta: databaseType:bibtex;}
+
+@comment{jabref-entrytype: Software: req[] opt[author;editor;title;organization;version;year;date;howpublished;url;urldate]}
