--- a/paper.tex
+++ b/paper.tex
@@ -11,6 +11,7 @@
 \usepackage{siunitx}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{subfigure}
 
 \usepackage{csquotes}
 \usepackage[style=authoryear,backend=biber]{biblatex} 
@@ -48,7 +49,7 @@
 \input{mainpart}
 \input{evaluation}
 \input{conclusion}
-\input{story}
+%\input{story}
 
 
 \printbibliography
