--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,16 +3,10 @@
 
 \section{Conclusion}
 
-\begin{itemize}
-	\item main insights:
-		\begin{itemize}
-			\item both routing and finding the optimal time can reduce heat exposure significantly
-			\item the proposed approaches can help people ot adapt their everyday behaviour  to reduce their heat stress risk
-		\end{itemize}
-	\item non restrictions of our approach / possible improvements
-		\begin{itemize}
-			\item the data basis can be improved (e.g. via a locale sensor network)
-			\item using a dynamic instead of static routing approach
-			\item find a optimal tour for multiple shops 
-		\end{itemize}
-\end{itemize}
+The results of our evaluation are showing that the approaches proposed in this paper are able to reduce the heat exposure significantly. Those, the recommendations given can help people to adapt their everyday and reduce their personal risk to be affected by heat stress. That the second approach (finding an optimal point in time with minimal heat exposure)  can decrease the heat stress risk more strongly is not surprising, since the time of the day has a huge effect on the heat exposure. Since, there are no significant differences between the air temperature and the heat index as a thermal comfort measure, we cannot give any advice in this perspective. 
+
+As usually the reduction of heat exposure leads to a longer distance to walk the users should decide based on their personal preferences, i.e. if is user is willing to take longer route to reduce the heat stress risk.
+
+The approach proposed in this paper has some known restrictions and there elimination can be object of future research. First of all, the weather data available had a low spatial and temporal resolution. Utilizing e.g. data from a wireless sensor network can help to improve the data basis and to produce more meaningful results. In that regard, the usage of more complex thermal comfort measure like the UTCI can help to farther improve the reliability of the results. Another restriction is the usage of static routing algorithm instead of dynamic routing method. Using a dynamic routing algorithm as those proposed by \citeauthor{Dang2012} (\citeyear{Dang2012}, \citeyear{Dang2013}) can help to consider the temporal variation more precise.
+
+One very promising extension of our approach to find an optimal time is the consideration from multiple location types (supermarket, pharmacies, ATM, etc.). Thus, the goal is to find a tour with minimal heat exposure that contains exactly one of each location type. Here not only the time and the route with minimal heat exposure should be considered but also, the ordering of the locations.  
