--- a/paper.tex
+++ b/paper.tex
@@ -38,11 +38,12 @@
 \maketitle
 
 \begin{abstract}
-	Heat stress is a serious risk, in particular for certain groups like elderly or patients with multiple sclerosis or heart disease. Developments like the ageing of society, the increasing urbanisation (urban heat island effect) and the climate change are increasing the risk that people are affected by heat stress. One way to reduce those risks is to adapt the everyday behaviour, e.g. by performing purchases in the supermarket or pharmacy in the morning or evening when temperatures are lower. 
+	Heat stress is a serious risk, which affects in particular  groups like elderly or patients with multiple sclerosis or heart disease and is especially pronounced in cities. Developments like the ageing of society, the increasing urbanisation (urban heat island effect) and the climate change are increasing the risk that people are affected by heat stress. One way to reduce those risks is to adapt the everyday behaviour. Essential tasks such as performing purchases in the supermarket or pharmacy can be scheduled in the early morning or evening when temperatures are lower. 
 	
-	Therefore we are presenting two different approaches for decision support tools that can help people to adapt their everyday behaviour. At first we're presenting a route planer for pedestrians that can find a route with minimal heat exposure. The second approach we're proposing is a tool that supports the user to select the point in time with a minimal risk of heat stress, considering e.g. the opening hours of a shop. In both cases we are utilizing, among other, remote sensing data of a thermal flight scanner. 
+To encourage and support such a change of behaviour, we propose a two step approach. The first step is a route planer for pedestrians that can find a route with minimal heat exposure. The second step is a tool that supports the user to select the point in time with a minimal risk of heat stress, considering e.g. the opening hours of a shop. The route planer is then used to calculate the heat stress and present the optimal route at that point in time.
+We are evaluation our approach on a part of the city of Karlsruhe, combining remote sensing data of a thermal flight scanner with official weather station data. 
 	
-	Our results are showing that both approaches are able to reduce the heat exposure and therefore can help people to decrease the risk of heat stress in their everyday life.
+Our results show that the combined approach as well as its single steps alone can reduce the heat exposure and therefore the heat stress for typical daily tasks.
 \end{abstract}
 
 \input{introduction}
