--- a/literature.bib
+++ b/literature.bib
@@ -1,5 +1,13 @@
 % Encoding: UTF-8
 
+
+@misc{department2014world,
+  title={World Urbanization Prospects: The 2014 Revision, Highlights (ST/ESA/SER. A/352)},
+  author={Department of Economic and Social Affairs, Population Division, United Nations},
+  year={2014},
+  publisher={United Nations New York, NY, USA}
+}
+
 @InProceedings{Broede2009,
   author =    {Peter Bröde and Dusan Fiala and Krzysztof Blazejczyk and Yoram Epstein and Ingvar Holmér and Gerd Jendritzky and Bernhard Kampmann and Mark Richards and Hannu Rintamäki and Avraham Shitzer and George Havenith},
   title =     {Calculating UTCI Equivalent Temperature},
@@ -474,6 +482,18 @@
   number =  {3},
   pages =   {133--152},
   doi =     {10.3390/cli2030133}
+}
+
+
+@article{Trobine2008death,
+  title={Death toll exceeded 70,000 in Europe during the summer of 2003},
+  author={Robine, Jean-Marie and Cheung, Siu Lan K and Le Roy, Sophie and Van Oyen, Herman and Griffiths, Clare and Michel, Jean-Pierre and Herrmann, Fran{\c{c}}ois Richard},
+  journal={Comptes rendus biologies},
+  volume={331},
+  number={2},
+  pages={171--178},
+  year={2008},
+  publisher={Elsevier}
 }
 
 @comment{jabref-meta: databaseType:bibtex;}
