--- a/mainpart.tex
+++ b/mainpart.tex
@@ -3,7 +3,7 @@
 
 \section{Minimize Heat Exposure}
 
-We are presenting to possible ways how people can be supported to reduce their heat stress risk in their everyday life. First we're presenting an approach to find a route for pedestrian with a minimal heat exposure. On this basis, we show an approach to find a point in time with a minimal heat exposure, for instance to go shopping in a supermarket.
+We are presenting a two step approach to supported people to reduce their heat stress risk in their everyday life. First we are presenting an approach to find a route for pedestrian with a minimal heat exposure. On this basis, we show an approach to find a point in time with a minimal heat exposure, for instance to go shopping in a supermarket.
 
 \subsection{Finding a Route with Minimal Heat Exposure}
 
@@ -33,9 +33,9 @@ In other words, a weighting function $w$ fulfils the FIFO property if the numera
 Usually, we cannot assume that $w_h$ fulfils the FIFO property, because the function most of the time depends on the air temperature and the air temperature can decrease more than $-1$ over time. Since, most people are not willing to wait at a node as well, finding a route with a minimal heat exposure is $\mathcal{NP}$-hard. Therefore, 
 hereafter the edge weighting is frozen at the starting time $t_0$ so that we have static route planning problem and classic algorithms like  \citeauthor{Dijkstra1959}'s algorithm \parencite{Dijkstra1959} can be applied. 
 
-\subsubsection{The Edge Weighting Function \label{sec:edge-weighting}}
 
-Above, we described the basic modelling of the routing problem. To find a route with a minimal heat exposure it is key to define the edge weighting function in an appropriated way. Those we need meteorological data (like air temperature and relative humidity) in a sufficient spatial and temporal resolution so we can leverage the variation in that data to find a route with minimal heat exposure. On basis of those meteorological data we can obtain the thermal comfort values as a time-dependent raster $H(t) = \left(h_{ij}(t)\right)$, where $h_{ij}(t)$ denotes the thermal comfort value in raster cell $c_{ij}$ at time $t \in T$. As we are only interested in heat exposure, we assume that values of $h$ below a certain threshold $h_{comfort}$ \parencite[e.g. \SI{20}{\celsius}, cf.][]{Jendritzky2000} are considered comfortable and do not have a negative impact on the health. If the value of raster cell is bellow $h_{comfort}$ it is simply set to that value.
+
+\subsubsection{The Edge Weighting Function \label{sec:edge-weighting}}
 
 \begin{figure}
 	\centering
@@ -45,20 +45,24 @@ Above, we described the basic modelling of the routing problem. To find a route 
 	\label{fig:raster-edge-mapping}
 \end{figure}
 
+To find a route with a minimal heat exposure it is key to define the edge weighting function in an appropriated way. At this, it is not sufficient to only take the actual thermal comfort value  in to account, we also must consider the time a person is exposed to the heat. Below, we assume that the time of exposure is proportional to the length of the edge $w_d$ \parencite[following][]{Hasenfratz2015}. Based on this assumption we are defining the edge weighting function $w_h$ as follows \parencite[cf.][]{Hasenfratz2015}: 
+\begin{equation}\label{eq:edge-weight}
+w_h(e, t) := \sum_{c \in Intersec(e)} d_c \cdot h_c(t).
+\end{equation}
+Here, the thermal comfort values (like air temperature or heat index) are represented as time-dependent raster $H(t) = \left(h_{ij}(t)\right)$, where $h_{ij}(t)$ denotes the thermal comfort value in raster cell $c_{ij}$ at time $t \in T$. In the formula above, $Intersec(e)$ is the set of raster cells intersected by the edge $e$ and $d_c$ the length of the intersection of $e$ with raster cell $c$.  That is, to obtain the edge weight, the value of each intersected raster cell is weighted with the length of the intersection and then accumulated, as shown in figure~\ref{fig:raster-edge-mapping}.
 
-But it is not sufficient to only take the actual thermal comfort value  in to account, we also must consider the time a person is exposed to the heat. Below, we assume that the time of exposure is proportional to the length of the edge $w_d$ \parencite[following][]{Hasenfratz2015}. Since an edge can cross multiple raster cell we use the value of the intersected raster cell and weighting it with the length of the intersection (see example in figure \ref{fig:raster-edge-mapping}). So finally, we can obtain the weighing function  $w_h$ as follows \parencite[cf.][]{Hasenfratz2015}: 
- 	\begin{equation}\label{eq:edge-weight}
- 		w_h(e, t) := \sum_{c \in Intersec(e)} d_c \cdot h_c(t),
- 	\end{equation}
-where $Intersec(e)$ is the set of raster cells intersected by the edge $e$, $d_c$ the length of the intersection of $e$ with raster cell $c$ and $h_c(t)$ the value of raster cell $c$ at time $t$.
+Using the actual thermal comfort measures -- air temperature and heat index -- we get the following edge weighting functions:
+\begin{align}
+	\label{eq:edge-weight-temperature}
+	w_{T_a}(e,t)& = \sum_{c \in Intersec(e)} d_c \cdot T_a(t, c),
+\end{align}
+for the air temperature and respectively:
+\begin{align}
+	\label{eq:edge-weight-heatindex}
+	w_{HI}(e,t)& = \sum_{c \in Intersec(e)} d_c \cdot T_{HI}\left(T_a(t, c), RH(t)\right)
+\end{align}
+for the heat index. Here, $T_a(t,c)$ is the air temperature in raster cell $c$ at time $t \in T$, $RH(t)$ is the relative humidity at time $t$ and $T_{HI}$ is Steadman's heat index. How we obtained those values is described below in section \ref{sec:data-sets}.
 
-%TODO
-%\begin{itemize}
-%	\item general modelling (distance times heat exposure), $T^{comfort}$ as lower bound
-%	\item mapping raster cells to road network
-%	\item explain data available (or should that be part of )
-%\end{itemize}
- 
  \subsection{Finding the Optimal Point in Time \label{sec:find-optimal-time}}
  
  Apart from selecting a route with minimal heat exposure the risk of heat stress in the everyday life (e.g. go shopping in a supermarket) can massively be reduced by selecting the appropriate time for this action. That's because usually, the heat exposure is highest at middays and significant lower in the morning or evening.
