--- a/introduction.tex
+++ b/introduction.tex
@@ -25,18 +25,28 @@ In this paper we use this reasoning into a two step approach to help individuals
    
 \subsection{Related Work} 
 
-\subsubsection{Thermal Comfort}
+\subsubsection{Heat Stress}
+The impact of heat on the human body has long been a subject of study. In particular , the term thermal comfort plays a key role, which describes climatic conditions consider comfortable, i.e. neither to warm nor to cold.
 
-To achieve our goals, we need a measure to describe the influence of heat on the human body.  In this context, the term thermal comfort plays a key role, which describes climatic conditions consider comfortable, i.e. neither to warm nor to cold.
+Heat can be defined in several ways, where the most simple one is the air temperature. But other, more in depth approaches consider additional factors such as e.g. humidity and physical activity \parencite{Staiger2011,Huebler2007}. Staiger et al.\parencite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. They present such a model and update this model to include factors such as sweating in a follow up paper\parencite{Staiger2011}. 
 
-To describe the influence of the atmospheric environment on the human body it is not sufficient to only take the air temperature into account. Other factors like the humidity, wind speed, sun radiation clothing and physical activity playing an important role as well \parencite{Staiger2011,Huebler2007}.  Those it's essential to consider a complete heat budget model of the human body to be able to make any reliable statements on the thermal perception and the physiological load on the cardiovascular system \parencite{Staiger1997}. A complete heat budget model of the human body must reach a balance between the internal heat production and environment by exchanging heat, e.g. via sweating \parencite{Staiger2011}. 
+As such exhaustive models are quite difficult to compute and the necessary data is not always available, heat indices are often employed. The most well known indices that consider a complete human heat budget model are the following:
+\begin{inparaenum}[(1)]
+  \item \citeauthor{Steadman1979}'s heat index (\citeauthor{Steadman1979} \citeyear*{Steadman1979}\citeyear*{Steadman1979a}),
+  \item the predicted mean vote (PMV) \parencite{Fanger1973},
+  \item the perceived temperature \parencite{Staiger1997,Jendritzky2000},
+  \item and the universal thermal climate Index UTCI \parencite{Jendritzky2010}.
+\end{inparaenum}
 
-Over time different indices that considers a complete human heat budget model haven been developed like \citeauthor{Steadman1979}'s heat index  (\citeauthor{Steadman1979} \citeyear*{Steadman1979}, \citeyear*{Steadman1979a}), the predicted mean vote (PMV) \parencite{Fanger1973}, the perceived temperature \parencite{Staiger1997,Jendritzky2000} or the universal thermal climate Index UTCI \parencite{Jendritzky2010}.
+For all these indices the following meteorological parameters are important:
+\begin{inparaenum}[(1)]
+\item air temperature,
+\item vapour pressure,
+\item wind velocity 
+\item and mean radiant temperature of the surroundings \parencite{Matzarakis1999}.
+\end{inparaenum}
 
-For the examination of the thermal comfort the following meteorological parameters are important: air temperature, vapour pressure,
-wind velocity and mean radiant temperature of the surroundings \parencite{Matzarakis1999}.
-
-Because we only had air temperature and the relative humidity at hand we used \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and, as a simple comparison measure, the air temperature. To compute an approximation of the heat index we used the formula published by \textcite[77]{Stull2011}. 
+Based on the availability of data, in this paper we will use \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and, as a simple comparison measure, the air temperature. To compute an approximation of the heat index we use the formula published by \textcite[77]{Stull2011}.  
 
 \subsubsection{Time Dependent Routing}
 Several research projects have considered environmental factors for pedestrian routing in the paste. The AffectRoute routing algorithm proposed by \textcite{Huang2014} for instance takes the affective responses to the environment into account, e.g. to find a route that a person considers safer.  \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015} in his PhD thesis.
@@ -44,6 +54,7 @@ Several research projects have considered environmental factors for pedestrian r
 The NaviComf framework for pedestrian routing proposed by \citeauthor{Dang2012} (\citeyear{Dang2012}, \citeyear{Dang2013}), enables to improve the comfort considering environmental factors varying over time. The proposed framework uses a multi-factor cost model for the evaluation of the route and enables them to consider heterogeneous environmental information from multi-modal
  sensors like air temperature and humidity. To find a optimal route \textcite{Dang2013} are proposing three different algorithms,  a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing app for thermal comfort navigation. The meteorological used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
 
+In our approach we 
 
 %TODO anpassen
 To find a route with minimal heat exposure we are using a different approach then \citeauthor{Dang2012} (\citeyear{Dang2012}, \citeyear{Dang2013}). First of all we didn't have data of a mobile sensor network at hand, instead we're used the remote sensing data of thermal scanner flight as well as the data of weather station. Another contribution is the comparison of different thermal comfort measures like air temperature and heat index. A further difference is the application of static routing algorithm instead of dynamic one as used by \citeauthor{Dang2012}.
